img trabajo destacado

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="section-divider"></div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-8">
                     <div class="group relative overflow-hidden rounded-lg">
-                        <img loading="lazy" decoding="async" src="/img/IMG_5984.JPG" alt="Hombre con un corte de pelo estilo fade y barba perfilada." class="img-zoom">
+                        <img loading="lazy" decoding="async" src="/img/barberia1-trabajodest.webp" alt="Hombre con un corte de pelo estilo fade y barba perfilada." class="img-zoom">
                         <div class="img-overlay"><h3 class="img-title">Fades Perfectos</h3></div>
                     </div>
                     <div class="group relative overflow-hidden rounded-lg">
