--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <p class="text-gray-400 mt-4 max-w-2xl mx-auto">¿Listo para tu transformación? Completa el formulario y asegura tu hora. Recibirás una confirmación por WhatsApp o email.</p>
                 </div>
                 <!-- Formulario funcional con Formspree -->
-                <form id="contact-form" action="https://formspree.io/f/TU_ID_DE_FORMULARIO" method="POST" class="max-w-2xl mx-auto mt-10">
+                <form id="contact-form" action="https://formspree.io/f/xjkorkvw" method="POST" class="max-w-2xl mx-auto mt-10">
                     <div id="form-success" class="hidden bg-green-600 text-white p-4 text-center mb-4 rounded-lg">
                         ¡Gracias! Tu solicitud ha sido enviada. Te contactaremos a la brevedad.
                     </div>
