--- a/index.html
+++ b/index.html
@@ -183,6 +183,20 @@
                 </form>
             </div>
         </section>
+
+        <!-- Map Section -->
+        <section id="ubicacion" class="h-96">
+            <iframe 
+                src="https://maps.app.goo.gl/VuFnpCADxQqebE2Z7" 
+                width="100%" 
+                height="100%" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade"
+                title="Mapa de ubicación de Michael The Barber Studios en Coquimbo">
+            </iframe>
+        </section>
     </main>
 
     <!-- Footer -->
