--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <!-- Map Section -->
         <section id="ubicacion" class="h-96">
             <iframe 
-                src="https://maps.app.goo.gl/VuFnpCADxQqebE2Z7" 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3450.490158445018!2d-71.25460062488668!3d-29.90795197492582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9691ca0a7c4f4a9d%3A0x86e6b4f762696b9a!2sMICHAEL%20THE%20BARBER!5e0!3m2!1sen!2scl!4v1722124119107!5m2!1sen!2scl7" 
                 width="100%" 
                 height="100%" 
                 style="border:0;" 
