--- a/index.html
+++ b/index.html
@@ -215,7 +215,18 @@
     </main>
     <!-- Footer -->
     <footer class="bg-black border-t border-gray-800">
-        <!-- Contenido del footer -->
+        <div class="container mx-auto px-6 py-8 text-center text-gray-500">
+            <h3 class="font-display text-2xl text-white tracking-wider">MB STUDIOS</h3>
+            <p class="mt-4">Lago Blanco 1585, 1803000 Coquimbo, Chile</p>
+            <p>+56 9 1234 5678</p>
+            <div class="mt-6">
+                <a href="https://www.instagram.com/michael.the.barber_studios/" target="_blank" rel="noopener noreferrer" class="inline-block hover:text-white transition" aria-label="Visita nuestro Instagram">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07s-3.584-.012-4.85-.07c-3.252-.148-4.771-1.691-4.919-4.919-.058-1.265-.069-1.645-.069-4.85s.011-3.584.069-4.85c.149-3.225 1.664-4.771 4.919-4.919 1.266-.058 1.644-.07 4.85-.07zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948s.014 3.667.072 4.947c.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072s3.667-.014 4.947-.072c4.358-.2 6.78-2.618 6.98-6.98.059-1.281.073-1.689.073-4.948s-.014-3.667-.072-4.947c-.2-4.358-2.618-6.78-6.98-6.98-1.281-.058-1.689-.072-4.948-.072zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.162 6.162 6.162 6.162-2.759 6.162-6.162-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4s1.791-4 4-4 4 1.79 4 4-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.441 1.441 1.441 1.441-.645 1.441-1.441-.645-1.44-1.441-1.44z"/></svg>
+                </a>
+            </div>
+            <p class="text-xs mt-6">&copy; 2025 Michael The Barber Studios. Todos los derechos reservados.</p>
+            <p class="text-xs mt-1">Diseñado por JuanEmilioDev</p>
+        </div>
     </footer>
 
     <!-- JavaScript Personalizado -->
