--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
                 <div class="section-divider"></div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-8">
                     <div class="group relative overflow-hidden rounded-lg">
-                        <img loading="lazy" decoding="async" src="/img/IMG_5984.JPG" alt="Hombre con un corte de pelo estilo fade y barba perfilada." class="img-zoom">
+                        <img loading="lazy" decoding="async" src="/img/barberia1-trabajodest.webp" alt="Hombre con un corte de pelo estilo fade y barba perfilada." class="img-zoom">
                         <div class="img-overlay"><h3 class="img-title">Fades Perfectos</h3></div>
                     </div>
                     <div class="group relative overflow-hidden rounded-lg">
-                        <img loading="lazy" decoding="async" src="/img/IMG_8078.JPG" alt="Joven con el pelo teñido de un color fantasía platinado." class="img-zoom">
+                        <img loading="lazy" decoding="async" src="/img/barberia2-trabajodest.avif" alt="Joven con el pelo teñido de un color fantasía platinado." class="img-zoom">
                         <div class="img-overlay"><h3 class="img-title">Colorimetría Pro</h3></div>
                     </div>
                     <div class="group relative overflow-hidden rounded-lg">
-                        <img loading="lazy" decoding="async" src="/img/IMG_0177-1.JPG" alt="Corte de pelo con un diseño de líneas y formas geométricas." class="img-zoom">
+                        <img loading="lazy" decoding="async" src="/img/barberia3-trabajodest.avif" alt="Corte de pelo con un diseño de líneas y formas geométricas." class="img-zoom">
                         <div class="img-overlay"><h3 class="img-title">Diseño Freestyle</h3></div>
                     </div>
                 </div>
