barber+maps fix

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                 <div class="section-divider"></div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-10 max-w-5xl mx-auto">
                     <div class="text-center group"><img loading="lazy" decoding="async" src="/img/IMG_5984.JPG" alt="Retrato del barbero Michael" class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"><h3 class="mt-5 text-2xl font-display text-white uppercase">Michael The Barber</h3><p class="text-gray-400">Fundador / Especialista en Color</p></div>
-                    <div class="text-center group"><img loading="lazy" decoding="async" src="/img/barbero2" alt="Retrato del barbero Aleee Cut" class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"><h3 class="mt-5 text-2xl font-display text-white uppercase">Aleee Cut</h3><p class="text-gray-400">Experto en Fades</p></div>
-                    <div class="text-center group"><img loading="lazy" decoding="async" src="/img/barbero3" alt="Retrato del barbero Kevo Cuts" class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"><h3 class="mt-5 text-2xl font-display text-white uppercase">Kevo Cuts</h3><p class="text-gray-400">Especialista en Diseño Freestyle</p></div>
+                    <div class="text-center group"><img loading="lazy" decoding="async" src="/img/barbero2.avif" alt="Retrato del barbero Aleee Cut" class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"><h3 class="mt-5 text-2xl font-display text-white uppercase">Aleee Cut</h3><p class="text-gray-400">Experto en Fades</p></div>
+                    <div class="text-center group"><img loading="lazy" decoding="async" src="/img/barbero3.avif" alt="Retrato del barbero Kevo Cuts" class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"><h3 class="mt-5 text-2xl font-display text-white uppercase">Kevo Cuts</h3><p class="text-gray-400">Especialista en Diseño Freestyle</p></div>
                 </div>
             </div>
         </section>
@@ -222,7 +222,7 @@
                         <div class="h-80 w-full rounded-lg overflow-hidden border-2 border-gray-700">
                             <iframe 
                                 class="map-grayscale"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3450.490158445018!2d-71.25460062488668!3d-29.90795197492582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9691ca0a7c4f4a9d%3A0x86e6b4f762696b9a!2sMICHAEL%20THE%20BARBER!5e0!3m2!1sen!2scl!4v1722124119107!5m2!1sen!2scl" 
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d864.061178292458!2d-71.2546005853337!3d-29.972396471197104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9691cbd5bc6baeb1%3A0x1d123d4fb99d5ba5!2sMICHAEL%20THE%20BARBER!5e0!3m2!1ses-419!2scl!4v1753654219301!5m2!1ses-419!2scl" 
                                 width="100%" 
                                 height="100%" 
                                 style="border:0;" 
