--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 mt-12 items-start">
                     <!-- Columna del Formulario -->
                     <div>
-                        <form id="contact-form" action="https://formspree.io/f/TU_ID_DE_FORMULARIO" method="POST" class="w-full">
+                        <form id="contact-form" action="https://formspree.io/f/xjkorkvw" method="POST" class="w-full">
                             <div id="form-success" class="hidden bg-green-600 text-white p-4 text-center mb-4 rounded-lg">
                                 ¡Gracias! Tu solicitud ha sido enviada. Te contactaremos a la brevedad.
                             </div>
