--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     />
     <meta
       property="og:image"
-      content="https://placehold.co/1200x630/111111/D4AF37?text=Michael+The+Barber"
+      content="https://barberproyect.vercel.app/img/IMG_5984.JPG"
     />
     <!-- URL absoluta de tu mejor imagen -->
     <meta property="og:url" content="https://barberproyect.vercel.app/" />
@@ -50,16 +50,12 @@
     />
     <meta
       name="twitter:image"
-      content="https://placehold.co/1200x630/111111/D4AF37?text=Michael+The+Barber"
+      content="https://barberproyect.vercel.app/img/IMG_5984.JPG"
     />
     <!-- URL absoluta de tu mejor imagen -->
 
     <!-- Favicon -->
-    <link
-      rel="icon"
-      href="https://placehold.co/32x32/111111/D4AF37?text=MB"
-      type="image/png"
-    />
+    <link rel="icon" href="/img/IMG_0177.JPG" type="image/jpeg" />
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -296,7 +292,7 @@
       >
         <a href="#inicio" aria-label="Volver al inicio">
           <img
-            src="https://placehold.co/150x64/000000/FFFFFF?text=MB+Studios"
+            src="/img/IMG_0177.JPG"
             class="h-16 w-auto object-contain"
             alt="Logo de Michael The Barber Studios"
           />
@@ -375,9 +371,9 @@
             muted
             playsinline
             id="heroVideo"
-            poster="https://placehold.co/1920x1080/111111/FFFFFF?text=Imagen+de+Fondo"
+            poster="/img/IMG_5984.JPG"
           >
-            <!-- <source src="/video/IMG_1683.mp4" type="video/mp4"> -->
+            <source src="/video/IMG_1683.mp4" type="video/mp4" />
             Tu navegador no es compatible con el video.
           </video>
         </div>
@@ -418,7 +414,7 @@
               <img
                 loading="lazy"
                 decoding="async"
-                src="https://placehold.co/800x600/111111/FFFFFF?text=Fade"
+                src="/img/barberia1-trabajodest.webp"
                 alt="Hombre con un corte de pelo estilo fade y barba perfilada."
                 class="img-zoom"
               />
@@ -430,7 +426,7 @@
               <img
                 loading="lazy"
                 decoding="async"
-                src="https://placehold.co/800x600/111111/FFFFFF?text=Color"
+                src="/img/barberia2-trabajodest.avif"
                 alt="Joven con el pelo teñido de un color fantasía platinado."
                 class="img-zoom"
               />
@@ -442,7 +438,7 @@
               <img
                 loading="lazy"
                 decoding="async"
-                src="https://placehold.co/800x600/111111/FFFFFF?text=Diseño"
+                src="/img/barberia3-trabajodest.avif"
                 alt="Corte de pelo con un diseño de líneas y formas geométricas."
                 class="img-zoom"
               />
@@ -833,7 +829,7 @@
               <img
                 loading="lazy"
                 decoding="async"
-                src="https://placehold.co/192x192/1f2937/FFFFFF?text=Michael"
+                src="/img/IMG_5984.JPG"
                 alt="Retrato del barbero Michael"
                 class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"
               />
@@ -846,7 +842,7 @@
               <img
                 loading="lazy"
                 decoding="async"
-                src="https://placehold.co/192x192/1f2937/FFFFFF?text=Aleee"
+                src="/img/barbero2.avif"
                 alt="Retrato del barbero Aleee Cut"
                 class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"
               />
@@ -859,7 +855,7 @@
               <img
                 loading="lazy"
                 decoding="async"
-                src="https://placehold.co/192x192/1f2937/FFFFFF?text=Kevo"
+                src="/img/barbero3.avif"
                 alt="Retrato del barbero Kevo Cuts"
                 class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"
               />
