--- a/index.html
+++ b/index.html
@@ -306,7 +306,6 @@
         class="container mx-auto px-6 py-2 flex justify-between items-center"
       >
         <a href="#inicio" aria-label="Volver al inicio">
-          <!-- LOGO CON ESQUINAS REDONDEADAS -->
           <img
             src="/img/IMG_0177.JPG"
             class="h-16 w-auto object-contain rounded-xl"
@@ -538,7 +537,7 @@
           <h2 class="section-title text-center">Próximos Seminarios</h2>
           <div class="section-divider"></div>
 
-          <div class="relative">
+          <div class="relative mt-8">
             <div class="overflow-hidden">
               <div
                 id="carousel"
